src/components/Markdown/Markdown.module.css
.markdown h1 {
    margin-bottom: 1.25rem;
    margin-top: 3.5rem;
    vertical-align: middle;
}

/* First element should not have any margin to avoid having an inconsistent gap above */
.markdown > *:first-child, .markdown > *:first-child > * {
    margin-top: 0rem;
}

.markdown p {
    margin-top: 1rem;
    margin-bottom: 1rem;
    vertical-align: middle;
    line-height: 1.5rem;
}

.markdown h2 {
    margin-top: 3rem;
    margin-bottom: 0.75rem;
    vertical-align: middle;
}

.markdown h3 {
    margin-top: 2rem;
    margin-bottom: 0.5rem;
    vertical-align: middle;
}

.markdown a {
    text-decoration: underline;
    color: var(--accent);
}

.markdown table {
    border-spacing: 0;
    border-collapse: separate;
    margin-top: 1.5rem;
    margin-bottom: 1.5rem;
}

.markdown table th {
    background-color: var(--code-background);
}

.markdown table td {
    color: color-mix(in srgb, var(--text), var(--border) 50%)
}

.markdown table th, .markdown table td {
    border-bottom: 1px solid var(--border);
    border-right: 1px solid var(--border);
    padding: 6px 13px;
}

.markdown table tr th {
    border-top: 1px solid var(--border);
}

.markdown table tr th:first-child,
.markdown table tr td:first-child {
    border-left: 1px solid var(--border);
}

.markdown table tr:hover {
    background-color: var(--code-background);
}

.markdown table tr:first-child th:first-child {
    border-top-left-radius: 0.5rem;
}


.markdown table tr:first-child th:last-child {
    border-top-right-radius: 0.5rem;
}


.markdown table tr:last-child td:first-child {
    border-bottom-left-radius: 0.5rem;
}


.markdown table tr:last-child td:last-child {
    border-bottom-right-radius: 0.5rem;
}

.light-dark img:last-child {
    display: none;
}

html[mode="dark"] .markdown .light-dark img:first-child {
    display: none;
}

html[mode="dark"] .markdown .light-dark img:last-child {
    display: block;
}

html[mode="light"] .markdown .light-dark img:first-child {
    display: block;
}

html[mode="light"] .markdown .light-dark img:last-child {
    display: none;
}

.markdown ul, .markdown ol {
    margin-left: 1.5rem;
}

.markdown li {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
    vertical-align: middle;
}

.side-action {
    mask-repeat: no-repeat;
    mask-size: 1.5rem 1.5rem;
    will-change: mask-size, mask-position, background-color;
    mask-position: left center;
    background-color: transparent;
    opacity: 0;
    transition: background-color 0.1s ease-in-out;
    width: 3rem;
    height: 100%;
    display: inline-block;
    position: absolute;
    left: -3rem;
    vertical-align: middle;
    cursor: pointer;
}

.side-action.link {
    mask-image: url('/internal/link.svg');
}

.side-action.copy {
    mask-image: url('/internal/copy.svg');
}

.markdown {
    color: var(--text);
}

.markdown blockquote {
    --quote-color: var(--border);
    border-radius: 10px;
    padding: 1rem;
    margin: 1rem 0;
    border-left: 5px solid var(--quote-color);
    background: linear-gradient(
        90deg,
        color-mix(in srgb, var(--quote-color), transparent 70%),
        color-mix(in srgb, var(--quote-color), transparent 90%)
    );
}

.markdown .warning {
    --quote-color: #ffa300;
}

.markdown .details {
    --quote-color: color-mix(in srgb, #007eff, var(--border));
}

.quote p, .warning p, .details p {
    display: inline;
}

.markdown .icon {
    width: 1.5rem;
    height: 1.5rem;
    border-radius: 0;
    border: none;
    display: inline;
    margin: 0;
    margin-right: 0.5rem;
    padding: 0;
    vertical-align: middle;
}

@keyframes fade {
    0% {
        mask-size: 0rem 0rem;
        mask-position: 0.75rem center;
        opacity: 1;
    }
    20% {
        mask-size: 1.8rem 1.8rem;
        mask-position: -0.2rem center;
    }
    30% {
        mask-size: 1.5rem 1.5rem;
        mask-position: 0rem center;
    }
    80% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

.checked {
    mask-image: url('/internal/checkmark.svg') !important;
    background-color: var(--text);
    animation: fade 1s ease-in-out 0s 1 normal forwards running;
}

.container {
    position: relative;
    transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.inline {
    background-color: var(--code-background);
    color: var(--code-snippet);
    padding: 0.125rem;
    border-radius: 0.25rem;
    margin-top: 1rem;
    margin-bottom: 1rem;
    transition: background-color 0.5s ease;
}

.container pre {
    padding: 1rem;
    padding-right: 2rem;
    background-color: var(--code-background);
    line-height: 1.3rem;
    border-radius: 0.75rem;
    margin-top: 1rem;
    margin-bottom: 1rem;
    transition: background-color 0.5s ease;
}

.block {
    display: block;
    color: var(--code-foreground);
    overflow-x: scroll;
}

@media screen and (hover: hover) {
    .container:hover .side-action {
        background-color: color-mix(in srgb, var(--code-background), var(--text) 20%);
        opacity: 1;
    }

    .container:hover .side-action:hover {
        background-color: color-mix(in srgb, var(--text), transparent 20%);
    }
}

@media screen and (hover: none) {
    .container .side-action {
        left: -50px;
        background-color: var(--text);
    }
}

